Closed Bug 387204 Opened 17 years ago Closed 17 years ago

[FIX]nsContentUtils shouldn't do direct same-origin checks

Categories

(Core :: DOM: Core & HTML, defect)

x86
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla1.9alpha8

People

(Reporter: bzbarsky, Assigned: bzbarsky)

References

(Blocks 1 open bug)

Details

Attachments

(1 file, 2 obsolete files)

Attached patch Patch (obsolete) — Splinter Review
Using Equals() and Subsumes() is really much more what we want to be doing here, I think.  In particular, nsContentUtils::CanCallerAccess should _definitely_ use Subsumes().
Attachment #271317 - Flags: superreview?(jst)
Attachment #271317 - Flags: review?(jst)
Attached patch Slightly better (obsolete) — Splinter Review
Attachment #271317 - Attachment is obsolete: true
Attachment #271338 - Flags: superreview?(jst)
Attachment #271338 - Flags: review?(jst)
Attachment #271317 - Flags: superreview?(jst)
Attachment #271317 - Flags: review?(jst)
Attachment #271338 - Attachment is obsolete: true
Attachment #271341 - Flags: superreview?(jst)
Attachment #271341 - Flags: review?(jst)
Attachment #271338 - Flags: superreview?(jst)
Attachment #271338 - Flags: review?(jst)
Attachment #271341 - Flags: superreview?(jst)
Attachment #271341 - Flags: superreview+
Attachment #271341 - Flags: review?(jst)
Attachment #271341 - Flags: review+
Fixed.
Status: NEW → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
Flags: in-testsuite?
Component: DOM → DOM: Core & HTML
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: