Eliminate some uses of CheckSameOriginPrincipal in favor of Subsumes/Equals. Bug 387204, r+sr=jst